# gdb-disasm.nvim

./: CMakeLists.txt  README.md  da.lua  func.cpp  func.h  perf.cpp
lua/: gdbdisasm.lua
lua/gdbdisasm/: init.lua  log.lua
lua/test/: CMakeLists.txt
test/: func.cpp  perf.cpp
